Status
()
People
(Reporter: tapio.markula, Assigned: rods (gone))
Tracking
({crash})
Firefox Tracking Flags
(Not tracked)
Details
(URL)
Attachments
(2 attachments)
535 bytes,
text/html
|
Details | |
9.25 KB,
patch
|
dcone (gone)
:
review+
Marc Attinasi
:
superreview+
|
Details | Diff | Splinter Review |
Gecko/20011128 (Netscape 6.2.1) Tryin to print pages in my CSS-site crashed Gecko For example http://www.nic.fi/~tapio1/Teaching/Elementitc.php3
Comment 1•17 years ago
|
||
confirming using build 2002010203 on Win2k. Talkback ID: TB1178972M. Stephen, can you retreive Talkback data please ?
Severity: normal → critical
Keywords: crash
OS: other → Windows 2000
confirming crash on Win 98... talkback ID = 1191320 stack trace = DocumentViewerImpl::CalcPageFrameLocation [d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 2636] DocumentViewerImpl::MapSubDocFrameLocations [d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 2699] DocumentViewerImpl::MapSubDocFrameLocations [d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 2704] DocumentViewerImpl::ReflowDocList [d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 2916] DocumentViewerImpl::SetupToPrintContent [d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 3488] nsQueryInterface::operator() [d:\builds\seamonkey\mozilla\xpcom\glue\nsCOMPtr.cpp, line 52] nsCOMPtr_base::assign_from_helper [d:\builds\seamonkey\mozilla\xpcom\glue\nsCOMPtr.cpp, line 81] DocumentViewerImpl::Print [d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 5402] GlobalWindowImpl::DoPrint [d:\builds\seamonkey\mozilla\dom\src\base\nsGlobalWindow.cpp, line 1979] GlobalWindowImpl::Print [d:\builds\seamonkey\mozilla\dom\src\base\nsGlobalWindow.cpp, line 1987] XPTC_InvokeByIndex [d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp, line 106] XPCWrappedNative::CallMethod [d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp, line 2011] XPC_WN_CallMethod [d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp, line 1267] js_Invoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 834] js_Interpret [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 2799] js_Invoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 850] js_InternalInvoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 925] JS_CallFunctionValue [d:\builds\seamonkey\mozilla\js\src\jsapi.c, line 3407] nsJSContext::CallEventHandler [d:\builds\seamonkey\mozilla\dom\src\base\nsJSEnvironment.cpp, line 1014] nsJSEventListener::HandleEvent [d:\builds\seamonkey\mozilla\dom\src\events\nsJSEventListener.cpp, line 182] nsEventListenerManager::HandleEventSubType [d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp, line 1206] nsEventListenerManager::HandleEvent [d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp, line 2198] nsXULElement::HandleDOMEvent [d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp, line 3449] nsXULElement::HandleDOMEvent [d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp, line 3468] PresShell::HandleDOMEventWithTarget [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6110] nsButtonBoxFrame::MouseClicked [d:\builds\seamonkey\mozilla\layout\xul\base\src\nsButtonBoxFrame.cpp, line 195] nsButtonBoxFrame::HandleEvent [d:\builds\seamonkey\mozilla\layout\xul\base\src\nsButtonBoxFrame.cpp, line 142] PresShell::HandleEventInternal [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6079] PresShell::HandleEventWithTarget [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6032] nsEventStateManager::CheckForAndDispatchClick [d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp, line 2465] nsEventStateManager::PostHandleEvent [d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp, line 1548] PresShell::HandleEventInternal [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6083] PresShell::HandleEvent [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 5987] nsView::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 387] nsViewManager::DispatchEvent [d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp, line 1930] HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 83] nsWindow::DispatchEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 850] nsWindow::DispatchWindowEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 867] nsWindow::DispatchMouseEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 4443] ChildWindow::DispatchMouseEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 4693] nsWindow::ProcessMessage [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 3402] nsWindow::WindowProc [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 1112] KERNEL32.DLL + 0x363b (0xbff7363b) KERNEL32.DLL + 0x24407 (0xbff94407) 0x00688c1a
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•17 years ago
|
||
Removing Stephen from CC (no Talkback data needed now).
(Assignee) | ||
Updated•17 years ago
|
Status: NEW → ASSIGNED
Summary: trying to print pages crashed Gecko → IFrame with display: none breaks printing
Target Milestone: --- → mozilla0.9.8
(Assignee) | ||
Comment 4•17 years ago
|
||
Created attachment 64501 [details]
reduced testcase
display:none for IFrame for media type print crashes
(Assignee) | ||
Comment 5•17 years ago
|
||
Created attachment 64568 [details] [diff] [review] patch file (p drive) This adds a lot more error checking and enables print to die more gracefully with other error conditions. It fixes a minor title & doc issue, it needs to set them into the PritnOptions instead of the PrintSettings Fixes printing display:none iframes, if the frame can't be found in the parent document then the iframe isn't printable.
Comment 6•17 years ago
|
||
Comment on attachment 64568 [details] [diff] [review] patch file (p drive) r=dcone
Attachment #64568 -
Flags: review+
Comment 7•17 years ago
|
||
Comment on attachment 64568 [details] [diff] [review] patch file (p drive) sr=attinasi
Attachment #64568 -
Flags: superreview+
Comment 8•17 years ago
|
||
were there other bugs for the fist two issues you mentioned in comment #5?
(Assignee) | ||
Comment 9•17 years ago
|
||
Actually, it was only one more issue the doc title & url, the extra checking was part of the display:none issue. And no there wasn't a bug, I found that while I was donig the display:none.
(Assignee) | ||
Comment 10•17 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Last Resolved: 17 years ago
Resolution: --- → FIXED
Comment 11•16 years ago
|
||
Tapio, does this work for you now? please verify...
You need to log in
before you can comment on or make changes to this bug.
Description
•