Better error failure when certain types of error occur during printing No longer tries to print IFrames or other sub-documents with display:none Sets title and url into PrintService from PrintSettings Sets "IsCancelled" on PrintSettings/Service when Print Dialog is cancelled (patr of 118017) Bug 117894 r=dcone sr=attinasi